    in the mini-buffer upon completion.

  - `forward-line` now returns the number of requested line moves that
    were not actioned, and treats a non-empty line at the end of a file
    correctly.

  - `message` now treats it's first argument as a format-string, and
    plugs % specifiers with values of the remaining args.

  - `save-buffers-kill-emacs` accepts an optional prefix argument; when
    non-nil save all modified buffers without asking.

  - `where-is` accepts an optional `insert` argument; when non-nil
    insert the result into the current buffer instead of the echo area.

  - New functions: `buffer-size`, `mark`, `point`, `point-max`,
    `point-min`.
    \C-h f ... RET for details.

*** Zlc

  - `defsubr` parameter lists now support &optional and &rest parameters.

  - `interactive` supports a "Nprompt: " and "p", making argument checking
    and reading more consistent across zlisp function implementations.

** Bug fixes

 - zemacs 'universal-argument' guards against non-ASCII keys, so you
   can execute a key sequences like "\M-35\RIGHT" without inducing a
   "char out of range" crash.

 - Removed latent infinite loops in fallback `MutableString:find` and
   `MutableString:rfind` (when the C library doesn't provide `memmem` or
   `memrchr` resp.).

 - No longer mangles the last character of a multi-line buffer when
   using fallback `MutableString:find`.


* Noteworthy changes in release 3 (2013-09-25) [alpha]

** Bug fixes

  Arrow keys work properly when resuming from M-x debug.


* Noteworthy changes in release 2.5.0.50 (2011-09-20) [alpha]

** Bug fixes

  Many bugs have been fixed.

** Build-related

  Many bugs have been fixed. Building against the required Lua
  libraries has been simplified; the required libraries can now all be
  installed as LuaRocks.

  Since C development has now been moved to the 2.4 series, the Lua
  series is now numbered 2.5.x.


* Noteworthy changes in release 2.4.0.50 (2011-05-04) [alpha]

** Bug fixes
